test/error/ast/ImportLoopB.mod
MODULE ImportLoopB;
IMPORT ImportLoopA;
END ImportLoopB.
